cabal-version:       2.2

name:                adventofcode
version:             2020
synopsis:            Advent of code 2020 solutions
description:         Advent of code 2020 solutions in Haskell by Erik Hesselink
license:             BSD-3-Clause
license-file:        LICENSE
author:              Erik Hesselink
maintainer:          hesselink@gmail.com
category:            Advent of Code
build-type:          Simple

Source-Repository head
  Type:                git
  Location:            git://github.com/hesselink/adventofcode2020.git

common shared-settings
  build-depends:       base >=4.9 && <4.14
  ghc-options:         -Wall
  default-language:    Haskell2010

executable 1
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      1

executable 2
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      2
  build-depends:       split

executable 3
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      3
  build-depends:       containers

executable 4
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      4
  build-depends:       split

executable 5
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      5

executable 6
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      6
  build-depends:       split

executable 7
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      7
  build-depends:       megaparsec
                     , containers

executable 8
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      8
  build-depends:       containers
                     , mtl

executable 9
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      9

executable 10
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      10

executable 11
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      11
  build-depends:       containers

executable 12
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      12
  build-depends:       mtl

executable 13
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      13
  build-depends:       split

executable 14
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      14
  build-depends:       containers

executable 15
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      15
  build-depends:       split
                     , vector

executable 16
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      16
  build-depends:       containers
                     , megaparsec

executable 17
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      17
  build-depends:       containers

executable 18
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      18
  build-depends:       megaparsec
                     , parser-combinators
                     , text

executable 19
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      19
  build-depends:       megaparsec
                     , containers
                     , parser-combinators

executable 20
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      20
  build-depends:       split
                     , containers
